# waytoodeep

./: Cargo.toml  README.md
src/: dumb.rs  main.rs
