[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
